feat: Update site title and favicon configuration

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="shortcut icon" href="/new-v1.png" type="image/x-icon"> -->
-    <title>SW | Portfolio</title>
+    <link rel="icon" href="/adcet_circle.png" type="image/png">
+    <link rel="apple-touch-icon" href="/adcet_circle.png">
+    <meta name="theme-color" content="#0f172a">
+    <meta name="description" content="Spark 2K25 - A Technical Event by ADCET">
+    <title>Spark 2K25 | ADCET Technical Event</title>
   </head>
   <body>
     <div id="root"></div>
