added the meta tag

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/adcet_circle.png" type="image/png">
-    <link rel="apple-touch-icon" href="/adcet_circle.png">
-    <meta name="theme-color" content="#0f172a">
-    <meta name="description" content="Spark 2K25 - A Technical Event by ADCET">
-    <title>Spark 2K25 | ADCET Technical Event</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/adcet_circle.png" type="image/png">
+  <link rel="apple-touch-icon" href="/adcet_circle.png">
+  <meta name="theme-color" content="#0f172a">
+  <meta name="description" content="Spark 2K25 - A Technical Event by ADCET">
+  <meta name="google-site-verification" content="-g570JiBMyW295Vj2vZBaC_0VumdQlx63AjrJPpJFK0" />
+  <title>Spark 2K26 | ADCET Technical Event</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
